objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>Overall Status</description>
        <label>Overall Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_TERMS__c</fullName>
        <inlineHelpText>When a payment is expected based on contract terms.</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NET 30</fullName>
                </value>
                <value>
                    <fullName>NET 45</fullName>
                </value>
                <value>
                    <fullName>NET 60</fullName>
                </value>
                <value>
                    <fullName>NET 90</fullName>
                </value>
                <value>
                    <fullName>ICC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Manager</description>
        <inlineHelpText>Product Manager</inlineHelpText>
        <label>PLM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Siemens_Status__c</fullName>
        <inlineHelpText>Overall PM@Siemens project lifecycle status</inlineHelpText>
        <label>PM@Siemens Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PM080</fullName>
                </value>
                <value>
                    <fullName>PM200</fullName>
                </value>
                <value>
                    <fullName>PM300</fullName>
                </value>
                <value>
                    <fullName>PM400</fullName>
                </value>
                <value>
                    <fullName>PM550</fullName>
                </value>
                <value>
                    <fullName>PM650</fullName>
                </value>
                <value>
                    <fullName>PM670</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROJECT_MANAGER__c</fullName>
        <inlineHelpText>Name of project manager, mapped from SAP partners.</inlineHelpText>
        <label>Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_CERT_OF_INSURANCE_ACTUAL_DATE__c</fullName>
        <label>Certification of Insurance Actual Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_CUST_PAID_INVOICES__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A project can only be closed if all items have been invoiced and all invoices have been paid, refunds have been processed, vendor PO&apos;s closed out and the backlog is adjusted.</inlineHelpText>
        <label>Project is Commercially closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_DOCUMENT_STATUS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All O&amp;M manuals or any other required documentation has been sent and accepted by the customer.</inlineHelpText>
        <label>All Documentation Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LETTER_OF_CREDIT_ACTUAL_DATE__c</fullName>
        <label>Letter of Credit Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LETTER_OF_CREDIT_PLANNED_DATE__c</fullName>
        <label>Letter of Credit Planned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LETTER_OF_CREDIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Credit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LIEN_WAIVERS_ACTUAL_DATE__c</fullName>
        <label>Lien Waivers Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LIEN_WAIVERS_PLANNED_DATE__c</fullName>
        <label>Lien Waivers Planned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LIEN_WAIVERS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Waivers Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_LOC_LIEU_OF_RETENTION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Credit in Lieu of Payment Rete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_PERFORMANCE_BOND_ACTUAL_DATE__c</fullName>
        <label>Performance Bond Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_PERFORMANCE_BOND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_POC_PROJECT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POC Project Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_SUPPLY_BOND_ACTUAL_DATE__c</fullName>
        <label>Supply Bond Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROJ_MGMT_SUPPLY_BOND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supply Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Expiration_Date__c</fullName>
        <description>Performance bond expiration date mapped from SAP Sales Order.</description>
        <label>Performance Bond Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Focus__c</fullName>
        <inlineHelpText>For R&amp;D projects, the product focus</inlineHelpText>
        <label>Product Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CMR</fullName>
                </value>
                <value>
                    <fullName>Fusesaver</fullName>
                </value>
                <value>
                    <fullName>GIS</fullName>
                </value>
                <value>
                    <fullName>GM38</fullName>
                </value>
                <value>
                    <fullName>GM-SG</fullName>
                </value>
                <value>
                    <fullName>LIS</fullName>
                </value>
                <value>
                    <fullName>LV MCC</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>SDV</fullName>
                </value>
                <value>
                    <fullName>SIMOVAC</fullName>
                </value>
                <value>
                    <fullName>Switches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <description>SAP: PRCTR_NAME. Returns the profit center name of the first line item on the SAP order.</description>
        <label>Profit Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Closed_Actual__c</fullName>
        <description>Project closed date - actual</description>
        <externalId>false</externalId>
        <label>Project Closed - Actual</label>
        <required>false</required>
        <trackFeedHistory>false</trackFeedHistory>
        <trackHistory>false</trackHistory>
        <trackTrending>false</trackTrending>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>After completion of all project closure activities, manually check the “Project Closed” checkbox.</inlineHelpText>
        <label>Project Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Complexity__c</fullName>
        <inlineHelpText>In an effort to better clarify project management load, we will assign a Project Complexity code to all PM managed projects.  The complexity scale ranges from 0 to 5.</inlineHelpText>
        <label>Project Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <inlineHelpText>General description of project</inlineHelpText>
        <label>Project Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Initiation_Complete__c</fullName>
        <formula>if(AND( Scope_Review_Completed__c , 
Contract_Review_Completed__c, 
Schedule_Review_Created_Completed__c, 
Invoicing_Revenue_Review_Completed__c, 
Resource_Review_Completed__c, 
Communication_Plan_Completed__c, 
Risk_Assessment_Completed__c),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatic check when all actual dates are populated</inlineHelpText>
        <label>Project Initiation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Initiation_Required__c</fullName>
        <formula>if( 
     AND(NOT(ISBLANK(PROJECT_MANAGER__c)), 
               OR(LIQUIDATED_DAMAGES__c = True,
                  PROJ_MGMT_LETTER_OF_CREDIT__c = True,
                  PROJ_MGMT_LIEN_WAIVERS__c = True,
                  PROJ_MGMT_PERFORMANCE_BOND__c = True,
                  PROJ_MGMT_SUPPLY_BOND__c = TRUE,
                  Total_Value__c &gt; 1000000)
         ),
     true,
     false
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;For projects assigned a Project Manager and one of the following conditions apply:
Liquidated Damages Apply, Commercial Documents Apply, Total Value is greater than $1M, or High Visibility Project.&quot;</inlineHelpText>
        <label>Project Initiation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Management_Comments__c</fullName>
        <inlineHelpText>Comments for the Project Manager to keep project comments.</inlineHelpText>
        <label>Project Management Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project Manager, so reports can be run against users instead of a text field. Text field is still used from SAP.</description>
        <inlineHelpText>Name of project manager, mapped from SAP partners.</inlineHelpText>
        <label>Project Manager (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Type__c</fullName>
        <inlineHelpText>SAP Header - Order Data Tab. Identifies how the order was entered into SAP. Typical classifications include; Manual, IPC - VC Application (COMPAS), EDI, iMall.</inlineHelpText>
        <label>Purchase Order Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QMIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For R&amp;D project, Quality Manager in Projects</inlineHelpText>
        <label>QMIP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Valid_Till__c</fullName>
        <description>SAP: QT_VALID_TO</description>
        <label>Quote Valid Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RISK_CONTINGENCY__c</fullName>
        <label>Risk Contingency (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>R_D_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For R&amp;D project, R&amp;D Engineer lead</inlineHelpText>
        <label>R&amp;D Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_D_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For R&amp;D project, R&amp;D Project Manager</inlineHelpText>
        <label>R&amp;D Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>SAP: VDATU</description>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Review_Actual__c</fullName>
        <inlineHelpText>Resource requirements (internal and external) has been completed and requests have been made</inlineHelpText>
        <label>Resource Review - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Resource Review - Actual is set.</inlineHelpText>
        <label>Resource Review - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Review_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c), SO_Created_Date__c + 14, DATE_FILERECEIVED_FROMAE__c + 14 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within two weeks after Handover</inlineHelpText>
        <label>Resource Review - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Actual__c</fullName>
        <inlineHelpText>Risk assessment has been completed and risks have been documented</inlineHelpText>
        <label>Risk Assessment - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Risk Assessment - Actual is set.</inlineHelpText>
        <label>Risk Assessment - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c) , SO_Created_Date__c + 14, DATE_FILERECEIVED_FROMAE__c + 14 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within two weeks after Handover</inlineHelpText>
        <label>Risk Assessment - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SF_Quote__c</fullName>
        <description>SAP: IHREZ</description>
        <inlineHelpText>SF Quote# mapped from SAP order header and triggers the relationship to the Opportunity</inlineHelpText>
        <label>SF Quote #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Created_Date__c</fullName>
        <description>SAP: ERDAT</description>
        <inlineHelpText>Date the Sales order was created in SAP.</inlineHelpText>
        <label>SO Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Last_Modified_Date__c</fullName>
        <description>SAP: AEDAT</description>
        <label>SO Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPECIFIC_CAP_ON_LDS_DELIVERY__c</fullName>
        <inlineHelpText>If liquidated damages apply for delivery of goods/services, the % cap per the contract.  Mapped from SAP</inlineHelpText>
        <label>Delivery LD&apos;s Cap (%)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SPECIFIC_CAP_ON_LDS_DRWG__c</fullName>
        <inlineHelpText>If liquidated damages apply for submittal of drawings, the % cap per the contract.  Mapped from SAP</inlineHelpText>
        <label>Drawing LD&apos;s Cap (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SURVEY_ISSUED__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked TRUE when the Send Survey action is executed</inlineHelpText>
        <label>Survey Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Business_Unit__c</fullName>
        <label>Sales Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS-US</fullName>
                </value>
                <value>
                    <fullName>MS-MEX</fullName>
                </value>
                <value>
                    <fullName>MS-CAN</fullName>
                </value>
                <value>
                    <fullName>MS-AAN</fullName>
                </value>
                <value>
                    <fullName>LP-US</fullName>
                </value>
                <value>
                    <fullName>LP-CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <inlineHelpText>SAP Header - Sales Tab. In 9462, it is used primarily to identify domestic vs. international orders.  In 5620, it is primarily used to identify the sold to sales region.</inlineHelpText>
        <label>Sales District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Email__c</fullName>
        <inlineHelpText>SAP Header - Partner Tab. Sales Employee Partner.  Brings over the e-mail in the order partner record.  If blank, it looks for a value in the HR record.</inlineHelpText>
        <label>Sales Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Name_2__c</fullName>
        <inlineHelpText>Name of sales employee, mapped from SAP partners.</inlineHelpText>
        <label>Sales Employee Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Split_1__c</fullName>
        <label>Sales Employee Split 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Employee_Split_2__c</fullName>
        <label>Sales Employee Split 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Employee__c</fullName>
        <inlineHelpText>Name of sales employee, mapped from SAP partners.</inlineHelpText>
        <label>Sales Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>SAP: SALES_OFFICE</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SAP Sales Order Number. Required for most projects, since projects originate from a Sales Order. SAP: VBELN</description>
        <externalId>true</externalId>
        <inlineHelpText>SAP Sales Order</inlineHelpText>
        <label>Sales Order #</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <inlineHelpText>SAP Header - Sales Tab. Indicates ownership of the order.
P100 for 9462
E100 for 5620</inlineHelpText>
        <label>Sales Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Partner__c</fullName>
        <inlineHelpText>SAP Header - Partners Tab. Indicates the sales employee identified on the order.</inlineHelpText>
        <label>Sales Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Review_Created_Actual__c</fullName>
        <inlineHelpText>Schedule and creation of initial external schedule (if required) has been completed</inlineHelpText>
        <label>Schedule Review/Created - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Review_Created_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Schedule Review - Actual is set.</inlineHelpText>
        <label>Schedule Review/Created - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Review_Created_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c) , SO_Created_Date__c + 7, DATE_FILERECEIVED_FROMAE__c + 7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within one week after Handover</inlineHelpText>
        <label>Schedule Review/Created - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_Delivered_and_Invoiced_Actual__c</fullName>
        <description>Field to be set based on when the Scope Delivered and Invoiced (Checkbox) is set</description>
        <inlineHelpText>Field to be set based on when the Scope Delivered and Invoiced (Checkbox) is set</inlineHelpText>
        <label>Scope Delivered and Invoiced - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_Delivered_and_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Delivered and Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_Review_Actual__c</fullName>
        <inlineHelpText>Technical scope of project (including submittal procedures and documentation) has been completed</inlineHelpText>
        <label>Scope Review - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is set to TRUE when the Scope Review - Actual is set.</inlineHelpText>
        <label>Scope Review - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_Review_Due__c</fullName>
        <formula>IF( ISBLANK(DATE_FILERECEIVED_FROMAE__c), SO_Created_Date__c + 7, DATE_FILERECEIVED_FROMAE__c + 7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Within one week after Handover</inlineHelpText>
        <label>Scope Review - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Segmented_Order_Value__c</fullName>
        <description>To represent the entire customer contract value when the order is a segmented project</description>
        <inlineHelpText>To represent the entire customer contract value when the order is a segmented project</inlineHelpText>
        <label>Segmented Order Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segmented_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked true when the project is part of a segmented order with another business unit</description>
        <inlineHelpText>Marked true when the project is part of a segmented order with another business unit</inlineHelpText>
        <label>Segmented Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <label>Service Order #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Freight_Amount__c</fullName>
        <inlineHelpText>Prepaid &amp; Add The Seller prepays the transportation charges, but adds the charges to the invoice for reimbursement from the Buyer. Prepaid &amp; Allow The Seller prepays the transportation charges and they are already included in the contract price.</inlineHelpText>
        <label>Ship Freight Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Notes__c</fullName>
        <description>As per [EM-1524] US we created. 
coming from SAP</description>
        <label>Ship To Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <inlineHelpText>SAP Shipping instructions from the Header level. If Shipping Instructions Long is blank, then will pull YE02 External Shipping Instructions</inlineHelpText>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Comments__c</fullName>
        <description>As per [EM-1524] US we created. 
coming from SAP</description>
        <label>Site Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Email__c</fullName>
        <description>As per [EM-1524] US we created. 
coming from SAP</description>
        <label>Site Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Name__c</fullName>
        <description>As per [EM-1524] US we created. 
coming from SAP</description>
        <label>Site Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Phone__c</fullName>
        <description>As per [EM-1524] US we created. 
coming from SAP</description>
        <label>Site Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_City__c</fullName>
        <inlineHelpText>The city of the Sold to Customer. Mapped from SAP customer master.</inlineHelpText>
        <label>Sold To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer_Classification__c</fullName>
        <inlineHelpText>SAP Sold To Customer Master (VD03) - Marketing Tab. Identifies Government vs. Non Government</inlineHelpText>
        <label>Sold To Customer Classification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_IFA__c</fullName>
        <inlineHelpText>The related IFA # for the Sold To partner in SAP.</inlineHelpText>
        <label>Sold To IFA #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_Name__c</fullName>
        <description>SAP: KUNNR_Name</description>
        <label>Sold To Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_Number__c</fullName>
        <description>SAP: KUNNR</description>
        <inlineHelpText>The related Sold To Party SAP number</inlineHelpText>
        <label>Sold To Party Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State__c</fullName>
        <inlineHelpText>The related Sold to Party state</inlineHelpText>
        <label>Sold To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_ZIP_Code__c</fullName>
        <inlineHelpText>The related Sold to Party zipcode</inlineHelpText>
        <label>Sold To ZIP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Industry_Sub_segment__c</fullName>
        <inlineHelpText>SAP Sold To Customer Master (VD03) - Marketing Tab. Defines the industry sub-segement for the Sold To Customer</inlineHelpText>
        <label>Sold to Industry Sub-segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Industry__c</fullName>
        <inlineHelpText>SAP Sold To Customer Master (VD03) - Marketing Tab. Defines the industry for the Sold To Customer</inlineHelpText>
        <label>Sold to Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Nielson_ID__c</fullName>
        <inlineHelpText>SAP Sold To Customer Master (VD03) - Marketing Tab. Specifies a regional division according to the market categories created by the A. C. Nielsen company.  Use to create a market analysis of your customers.</inlineHelpText>
        <label>Sold to Nielson ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any requirements outside of the normal invoicing process (print and mail).</description>
        <inlineHelpText>Any requirements outside of the normal invoicing process (print and mail).</inlineHelpText>
        <label>Special Billing Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>For R&amp;D projects, the status of the project</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply_Bond_Expiration_Date__c</fullName>
        <description>Supply Bond Expiration Date mapped from SAP Sales Order</description>
        <label>Supply Bond Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <description>Set by ICLMV_OCRtoPCR_TriggerAction which copies the T&amp;C value from Opportunity to the Project when the object relationship is set.</description>
        <inlineHelpText>The terms and conditions used for the contract. Copies from the related Opportunty but can be changed on the Project.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Siemens ZRG Internal</fullName>
                </value>
                <value>
                    <fullName>Siemens Industry, Inc. Terms &amp; Conditions</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Terms &amp; Conditions</fullName>
                </value>
                <value>
                    <fullName>Siemens and Customer Framework Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>The value of the related sales order items. This logic is maintained in the middleware (Biztalk).</description>
        <inlineHelpText>Total value of the project</inlineHelpText>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>